--- a/assets/css/diapo.css
+++ b/assets/css/diapo.css
@@ -1,9 +1,5 @@
-
 .pix_diapo {
 	background: #000;
-	-moz-box-shadow: 0 3px 6px #000;
-	-webkit-box-shadow: 0 3px 6px #000;
-	box-shadow: 0 3px 6px #000;
 	height: 250px;
 	margin: 0 0px;
 	overflow: hidden;
@@ -42,6 +38,8 @@
 	position: relative;
 	width: 100%;
 	z-index: 1002;
+	height: 45px;
+	background-color: #31A1FF;
 }
 #pix_commands {
 	cursor: pointer;
