--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,4 +1,5 @@
 /* ============== Layout Admin ========= */
+/* INI kOMEN */
 #admin_wrapper {
 	width: 1020px;
 	margin: 0px auto;
@@ -40,13 +41,26 @@
 	cursor: pointer;
 	transition: all 0.25s;
 }
-.button_admin:hover {background:#00A6EE;}
-
+.button_admin:hover {background-color:#00A6EE; color: #fff;}
 .button_admin:active {
 	position: relative;
 	top: 1px;
 	left: 1px;
 }
+[class*='btn_'] {
+	/*background-image: url('../images/admin/admin_login.png');*/
+	background-size: 24px;
+	background-repeat: no-repeat;
+	background-position: 2px center;
+	padding-left: 30px;
+}
+.btn_login {background-image: url('../images/admin/admin_login.png');}
+.btn_publish {background-image: url('../images/admin/admin_pubw.png');}
+.btn_sdraft {background-image: url('../images/admin/admin_draft.png');}
+.btn_upload {background-image: url('../images/admin/admin_uploadw.png');}
+.btn_add{background-image: url('../images/admin/admin_addw.png');}
+.btn_save{background-image: url('../images/admin/admin_savew.png');}
+
 #admin_content_left table.table_list{
 	width: 100%;
 	border:  solid 1px #31A1FF;
