--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,11 +1,15 @@
 body {
 	font-family: "Trebuchet MS",Arial,Helvetica,sans-serif;
-	font-size: 0.9em;
+	font-size: 15px;
 	line-height: 1.4;
 }
 a {text-decoration: none; color: #004A87;}
 a:hover {color: #006DC6;}
-
+input[type=text], input[type=password] {padding: 3px;}
+input[type=text]:focus,
+input[type=password]:focus  {
+	box-shadow: 0px 0px 4px rgba(0,0,0,0.3);
+}
 .divclear {clear: both;}
 
 #site_wrapper {
@@ -123,19 +127,19 @@ a:hover {color: #006DC6;}
 }
 
 #site_footer_body {
-	width: 1000px;
+	max-width: 1000px;
 	margin: 0px auto;
 	padding-top: 10px;
 }
 #site_footer_contact {
-	width: 350px;
+	max-width: 350px;
 	float: left;
 	padding: 10px;
 }
 #site_footer_partner {
-	width: 600px;
-	float: right;
-	padding: 10px;
+	max-width: 600px;
+	float: left;
+	padding: 5px;
 	border-left: solid 1px #fff;
 	min-height: 150px;
 }
@@ -297,7 +301,7 @@ a:hover {color: #006DC6;}
 }
 /*=====================================*/
 /*baru*/
-#site_header_logo{margin-top:20px;}
+#site_header_logo{padding-top:20px;}
 /*#site_bg_top {
 	position: absolute;
 	top:0px;
@@ -401,10 +405,10 @@ a:hover {color: #006DC6;}
 }
 
 .news_accordion div { 
-	height:75px; text-align:left;
+	text-align:left;
 	padding:5px 0 0 5px; width:475px; 
 	line-height:20px;
-	font-size:12px; color:#555555;
+	font-size:14px; color:#555555;
 }
 
 .news_accordion div a{
@@ -421,6 +425,43 @@ a:hover {color: #006DC6;}
 	line-height:80px; 
 }
 .table_struktur_org{
-		width:99%;
-	}
+	width:99%;
+}
+
+/* Alerts and pop-ups */
+.success, .warning, .errormsgbox, .validation {
+	border: 1px solid;
+	margin: 0 5px 10px;
+	padding:5px 5px 5px 50px;
+	background-repeat: no-repeat;
+	background-position: 10px center;
+    font-weight:bold;
+    width:auto;
+}
+
+.success {
+   
+	color: #4F8A10;
+	background-color: #DFF2BF;
+	background-image:url('../images/success.png');
+}
+.warning {
+
+	color: #9F6000;
+	background-color: #FEEFB3;
+	background-image: url('../images/warning.png');
+}
+.errormsgbox {
+ 
+	color: #D8000C;
+	background-color: #FFBABA;
+	background-color: rgba(255, 186, 186, 0.5);
+	background-image: url('../images/error.png');
 	
+}
+.validation {
+ 
+	color: #D63301;
+	background-color: #FFCCBA;
+	background-image: url('../images/error.png');
+}
