--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -28,6 +28,12 @@
 	bottom: 0px;
 	right: 0px;
 }
+#admin_content_nav {
+	border: 1px solid #31A1FF;
+	background-color: #EAF5FF;
+	padding: 5px;
+	font-size: 12px;
+}
 #admin_footer{
 	min-height: 32px; padding: 5px; background: #333333; text-align: center; color: #fff;
 	clear: both;
@@ -169,43 +175,7 @@
 	height:90px;
 	width:150px;
 }
-/* Alerts and pop-ups */
-.success, .warning, .errormsgbox, .validation {
-	border: 1px solid;
-	margin: 0 5px 10px;
-	padding:5px 5px 5px 50px;
-	background-repeat: no-repeat;
-	background-position: 10px center;
-    font-weight:bold;
-    width:auto;
-}
 
-.success {
-   
-	color: #4F8A10;
-	background-color: #DFF2BF;
-	background-image:url('../images/success.png');
-}
-.warning {
-
-	color: #9F6000;
-	background-color: #FEEFB3;
-	background-image: url('../images/warning.png');
-}
-.errormsgbox {
- 
-	color: #D8000C;
-	background-color: #FFBABA;
-	background-color: rgba(255, 186, 186, 0.5);
-	background-image: url('../images/error.png');
-	
-}
-.validation {
- 
-	color: #D63301;
-	background-color: #FFCCBA;
-	background-image: url('../images/error.png');
-}
 .readmore:before {
 	content: 'Readmore area:';
 	display: block;
