--- a/assets/css/tablet_version.css
+++ b/assets/css/tablet_version.css
@@ -1,4 +1,5 @@
 @media all and (max-width: 740px) {
+	body{font-size:13px;}
 	div#site_wrapper {
 		width: 100%;
 		margin: 0px auto;
@@ -8,11 +9,13 @@
 		min-height:50px;
 	}
 	#site_header_logoimg{margin:5px;}
-	.menu{
+	
+	div#site_header_logo{background:none}
+	.menu,div#divTrigger,div#divContent{
 		display:none;
 	}
 	
-	.menu_mini{display:block}
+	.menu_mini, div#partner_mini{display:block}
 	div#menu li{
 		width:24%;
 		min-width:200px;
@@ -73,7 +76,6 @@
 		width:20%;
 		height:auto;
 	}
->>>>>>> 22585706323264be09447f58c1edb3c5d35a2e8e
 	.search_panel{
 		display:none;
 	}
