--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,9 +6,10 @@ body {
 }
 a {text-decoration: none; color: #004A87;}
 a:hover {color: #006DC6;}
-input[type=text], input[type=password] {padding: 3px;}
+input[type=text], input[type=password], textarea {padding: 3px;}
 input[type=text]:focus,
-input[type=password]:focus  {
+input[type=password]:focus,
+textarea:focus  {
 	box-shadow: 0px 0px 4px rgba(0,0,0,0.3);
 }
 .divclear {clear: both;}
