--- a/assets/css/tablet_version.css
+++ b/assets/css/tablet_version.css
@@ -8,9 +8,9 @@
 	div#site_header{
 		min-height:50px;
 	}
-	#site_header_logoimg{margin:5px;}
+	#site_header_logoimg{margin:10px;}
 	
-	div#site_header_logo{background:none}
+	div#site_header_logo{background:none;height: auto;}
 	.menu,div#divTrigger,div#divContent{
 		display:none;
 	}
@@ -21,8 +21,6 @@
 		min-width:200px;
 		margin-left:15px;
 	}
-	
-	
 	div#menu a{
 		float:none;
 		margin:0px auto;
@@ -57,21 +55,6 @@
 	.event_unit{
 		width:100%;
 	}
-	/*
-	div#site_footer_body{
-		width:100%;
-		margin: 0px auto;
-	}
-	div#site_footer_partner{
-		width:97%;
-		min-height:50px;
-	}
-	div#site_footer_contact{
-		width:97%;
-	}
-<<<<<<< HEAD
-=======
-	*/
 	.site_partner{
 		width:20%;
 		height:auto;
